Update the FFT benchmark